# ai-native-callcenter

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  prompts.md  pyproject.toml
app/: config.py  logging_config.py  main.py
app/business/: claims_service.py  customer_service.py  knowledge_service.py
app/db/: connection.py  redis_client.py
app/flow_control/guideline/: loader.py  matcher.py  models.py  store.py
app/flow_control/journey/: engine.py  loader.py  matcher.py  models.py  store.py
app/flow_control/validator/: post_validator.py
app/pipeline/: factory.py
app/pipeline/processors/: journey_processor.py  validator_processor.py
app/telephony/: rtp_session.py  sip_server.py  sip_transport.py
app/tools/: claims_tools.py  customer_tools.py  executor.py  knowledge_tools.py  registry.py
data/guidelines/: claims.yaml  compliance.yaml
data/journeys/: claim_inquiry.yaml  claim_submission.yaml  knowledge_query.yaml
docker/: docker-compose.yml  init-postgres.sql
migrations/: env.py
migrations/versions/: 001_create_business_tables.py  002_create_journey_tables.py  003_create_guideline_and_audit_tables.py  004_seed_journey_definitions.py  005_seed_guidelines.py
openspec/: project.md
openspec/changes/implement-mvp-callcenter/: proposal.md  tasks.md
openspec/changes/implement-mvp-callcenter/specs/business/: spec.md
openspec/changes/implement-mvp-callcenter/specs/flow-control/: spec.md
scripts/: seed_claims.py  seed_customers.py  seed_knowledge.py
tests/: __init__.py  test_journey_engine.py
(+3 files in other folders)
